WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2006-02-22


Version 0.1.8 (under dev!):
   * added IRC raw data buffer (new key: alt-J + alt-R)
   * fixed display bug with /kill command
   * added new plugins functions: add_timer_handler, remove_timer_handler,
     remove_infobar
   * plugin messages handlers now called when message is ignored (by /ignore)
   * new behaviour for messages ignored by a message handler: now WeeChat
     executes standard handler, treating message as "ignored"
   * many commands allowed for aliases
   * many commands allowed when connecting to server
   * added Lua script plugin
   * added functions in plugins API: get_server_info, free_server_info,
     get_channel_info, free_channel_info, get_nick_info, free_nick_info
   * added option "look_nick_complete_first" (patch from Gwenn)
   * added option "look_open_near_server" (patch from Gwenn)
   * fixed bug with /upgrade and servers buffer
   * fixed bug with "get_dcc_info" plugin interface function
   * added new scroll keys for a few lines up/down (default: meta-pgup/pgdn)
     (patch from Pistos)
   * added new option "irc_away_check_max_nicks" to disable away check on
     channels with high number of nicks (patch from Gwenn)
   * added new command line argument for setting WeeChat homedir (-d or --dir)
     (patch from Gwenn)
   * fixed bug with charset in infobar highlights
   * fixed bug with buffer detection in plugins/scripts commands
   * fixed bug with /history command
   * added option "irc_show_away_once", to show away message only once in pv

Version 0.1.7 (2006-01-14):
   * fixed msg command (now allowed in private buffer with "*" as target)
   * removed "irc_default_msg_away" setting, for RFC 2812 conformity
     (/away command wihtout argument only removes away status),
     new values for "irc_display_away" (off, local, channel)
   * fixed refresh bug with Solaris when term size is changed